# Polars_Parquet_Learning

./: .gitignore  Cargo.toml  README.md  patch.diff
benches/: scan_vs_collect.rs
src/: background.rs  cli.rs  lib.rs  main.rs  parquet_examples.rs  search.rs  xml_dynamic.rs  xml_examples.rs  xml_to_parquet.rs
tests/: cli.rs  column_ops.rs  correlation.rs  example_data.rs  filter_count.rs  histogram.rs  join_group_pivot.rs  pagination.rs  read_parquet_error.rs  search.rs  summary.rs  xml_dynamic.rs  xml_round_trip.rs  xml_to_parquet.rs
tests/fixtures/: nested.parquet  numeric.parquet  sample.xml  temporal.parquet
