[package]
name = "Polars_Parquet_Learning"
version = "0.1.0"
edition = "2024"

[dependencies]
# Polars DataFrame library with Parquet support
polars = { version = "0.49.1", features = ["lazy", "parquet", "strings", "partition_by", "json"] }

# Low level Parquet crate (optional when using Polars)
parquet = "55.2"

# Serialization support
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"

# GUI framework built on egui
eframe = "0.32"
egui = "0.32"

# Native file dialogs
rfd = "0.15"

# Simplified error handling
anyhow = "1.0"
tokio = { version = "1", features = ["rt-multi-thread"] }
chrono = "0.4"
shlex = "1.3"

# Optional plotting support
egui_plot = { version = "0.32", optional = true }

[features]
plotting = ["egui_plot"]

[dev-dependencies]
tempfile = "3"
