[package]
name = "polars_parquet_learning"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
# Polars DataFrame library with Parquet support
polars = { version = "0.49.1", features = ["lazy", "parquet", "strings", "partition_by", "json", "regex", "pivot", "dtype-time", "rolling_window"] }

# Low level Parquet crate (optional when using Polars)
parquet = "55.2"

# Serialization support
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"

# GUI framework built on egui
eframe = { version = "0.32", default-features = false, features = ["glow", "x11", "wayland"] }
egui = { version = "0.32" }
egui_extras = { version = "0.32" }

# Native file dialogs
rfd = { version = "0.15" }

# Simplified error handling
anyhow = "1.0"
quick-xml = { version = "0.38", features = ["serialize"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
chrono = "0.4"
shlex = "1.3"
clap = { version = "4", features = ["derive"] }
serde_json = "1.0"

# Optional plotting support
egui_plot = { version = "0.33" }

[[bin]]
name = "polars_parquet_learning"

[dev-dependencies]
tempfile = "3"
criterion = "0.5"
